Fix attribution position & overflow
Before this attribution would appear under the sidebar, and would
overlap the credit images.

--- a/web/assets/js/map/layout.css
+++ b/web/assets/js/map/layout.css
@@ -12,7 +12,7 @@
   height: 100%;
 
   display: grid;
-  grid-template-columns: minmax(254px, 12.5%) 1fr;
+  grid-template-columns: minmax(254px, 12.5%) minmax(0, 1fr);
   grid-template-rows: 1fr min-content;
 }
 
@@ -45,14 +45,14 @@
   z-index: 0;
 }
 
-.credit-images {
+.attribution {
   grid-column: 1 / -1;
   grid-row: 2 / span 1;
   z-index: 1;
   align-self: end;
 }
 
-.sidebar-is-open .credit-images {
+.sidebar-is-open .attribution {
   grid-column: 2 / -1;
   margin-left: calc(-1 * var(--sidebar-control-width));
 }
